# mainpy

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: CI.yml  ci.yml  publish-pypi.yml  release.yml  stale.yml
examples/: click_command.py  click_group.py  functools_cache.py  simple_async.py  simple_sync.py  typer_command.py
mainpy/: __init__.py
tests/: test_integration.py  test_mainpy.py
